# devrel-claude-code-plugin

./: .gitignore  LICENSE  README.md  pyproject.toml
devrel-autonomy/.claude-plugin/: plugin.json
devrel-autonomy/agents/: browser.md  code-reviewer.md  coder.md  content-reviewer.md  orchestrator.md  researcher.md  reviewer.md  writer.md
devrel-autonomy/commands/: devrel-start.md
devrel-autonomy/skills/fullstack-app/: SKILL.md
devrel-autonomy/skills/screenshot-beautifier/: SKILL.md
devrel-autonomy/skills/screenshot-beautifier/scripts/: beautify.sh
devrel-marketplace/.claude-plugin/: marketplace.json
devrel-marketplace/devrel-autonomy/.claude-plugin/: plugin.json
devrel-marketplace/devrel-autonomy/agents/: coder.md  orchestrator.md  reviewer.md  writer.md
devrel-marketplace/devrel-autonomy/commands/: devrel-expand.md  devrel-review.md  devrel-start.md
src/: md_tools.py
src/drdemo/: agents.py  cli.py  context.py  md_tools.py  prompts.py  tui.py
test/: test_md_tools.py
