[project]
name = "drdemo"
version = "0.1.0"
description = "AI-powered tutorial and guide generation tool"
authors = [
    {name = "Daniel", email = "djliden91@gmail.com"},
]
dependencies = [
    "textual>=0.52.1",
    "llama-index>=0.10.0",
    "click>=8.1.7",
    "mistune>=3.1.3",
    "patch>=1.16",
]
requires-python = ">=3.9"

[project.scripts]
drdemo = "drdemo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drdemo"]
